--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>Gean & Rob</title>
 
@@ -17,9 +18,10 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 
   <!-- Custom styles for this template -->
-  <link href="css/grayscale.min.css" rel="stylesheet">
+  <link href="css/styles.min.css" rel="stylesheet">
 
 </head>
 
@@ -53,28 +55,34 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead">
-    <div class="container d-flex h-100 align-items-end">
-      <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">Gean & Rob</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">A Mayo Dublin Affair!!</h2>
-        <a href="#rsvp" class="btn btn-primary js-scroll-trigger">RSVP Now</a>
+  <header>
+    <div class="masthead">
+      <div class="container d-flex h-100 align-items-end">
+        <div class="mx-auto text-center">
+          <h1 class="mx-auto my-0 text-uppercase">Gean & Rob</h1>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">5th June 2020</h2>
+          <a href="#rsvp" class="btn btn-primary js-scroll-trigger">RSVP Now</a>
+        </div>
       </div>
     </div>
   </header>
 
-  <!-- Ceremony Section -->
+    <!-- Ceremony Section -->
   <section id="ceremony" class="ceremony-section text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-        </div>
+      <h2 class="text-white mb-4">Our Wedding Countdown</h2>
+      <div class="counter">
+        <div  id="countdown" class="text-white-50 mx-auto my-0"></div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
-    </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2 class="text-white mb-4">St Mary's Church (Tooreen)</h2>
+            <p class="text-white-50">Situated in the parish of Aghamore, Tooreen is a small village, 
+              approximately 5 miles from Ballyhaunis and 10 minutes drive from Ireland West Airport Knock.</p>
+          </div>
+        </div>
+        <img src="img/church.jpg" class="img-fluid" alt="">
+      </div>
     
   </section>
 
@@ -177,7 +185,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">geanandrob@gmail.com</a>
+                <a href="#">robandgean@gmail.com</a>
               </div>
             </div>
           </div>
@@ -225,7 +233,8 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/grayscale.min.js"></script>
+  <script src="js/site.min.js"></script>
+  <script src="js/countdown.min.js"></script>
 
 </body>
 
