--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
             <a class="nav-link js-scroll-trigger" href="#reception">Reception</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Accomodation</a>
+            <a class="nav-link js-scroll-trigger" href="#accomodation">Accomodation</a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
+            </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
           </li>
@@ -57,9 +60,11 @@
   <!-- Header -->
   <header>
     <div class="masthead">
-      <div class="container d-flex h-100 align-items-end">
+      <div class="d-flex h-100 align-items-end">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">Gean & Rob</h1>
+          <span class="title-text mx-auto my-0 text-uppercase">Gean </span>
+          <span class="title-text mx-auto my-0 text-uppercase"> & </span>
+          <span class="title-text mx-auto my-0 text-uppercase">Rob</span>
           <h2 class="text-white-50 mx-auto mt-2 mb-5">5th June 2020</h2>
           <a href="#rsvp" class="btn btn-primary js-scroll-trigger">RSVP Now</a>
         </div>
@@ -81,24 +86,32 @@
               approximately 5 miles from Ballyhaunis and 10 minutes drive from Ireland West Airport Knock.</p>
           </div>
         </div>
-        <img src="img/church.jpg" class="img-fluid" alt="">
+        <div class="row">
+          <div class="church-container col-xs-12 col-lg-6 mx-auto">
+            <div class="church-img"></div>
+          </div>  
+          <div class=" col-lg-1 mx-auto"></div>        
+          <div class="map-container col-xs-12 col-lg-5 mx-auto">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2354.802888299776!2d-8.766599584250413!3d53.82858238008291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485eaba2f3ac063f%3A0x7d47a5834d6dfb4f!2sSaint%20Mary&#39;s%20Catholic%20Church%2C%20Tooreen%2C%20Ballyhaunis%2C%20Co.%20Mayo!5e0!3m2!1sen!2sie!4v1569273479553!5m2!1sen!2sie" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          </div>
       </div>
-    
+      </div>
   </section>
 
   <!-- Reception Section -->
-  <section id="reception" class="reception-section bg-light">
+  <section id="reception" class="reception-section bg-light">    
     <div class="container">
+        <h2 class="text-black mb-4 text-center">The Reception</h2>
 
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/breaffy-house.jpg" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <h4>Breaffy House Resort</h4>
+            <p class="text-black-50 mb-0">Breaffy House Resort located on secluded 90 acre estate with manicured gardens and pond.   Allow your imagination to take control, as you arrive up the enchanting drive way that leads to the majestic 19th century manor house that is Breaffy House Resort. </p>
           </div>
         </div>
       </div>
@@ -106,14 +119,14 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <img class="img-fluid" src="img/park.jpg" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 reception">
             <div class="d-flex h-100">
               <div class="reception-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <h4 class="text-white">Woodland Estate</h4>
+                <p class="mb-0 text-white-50">Breaffy House Hotel known as ‘Destination Breaffy’ is located 3km outside Castlebar in County Mayo on a 90 acre woodland estate in the West of Ireland on the doorstep of the Wild Atlantic Way.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -124,14 +137,14 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <img class="img-fluid" src="img/night.jpg" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 reception">
             <div class="d-flex h-100">
               <div class="reception-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <h4 class="text-white">History</h4>
+                <p class="mb-0 text-white-50">Dominick Andrew Browne built Breaffy House in 1890. The house is a Scottish baronial mansion and is victorian in style. Designed by architect William M. Fawcett from Cambridge. The house has boldly recessed facades, a polygonal corner turret with battlements and pointed roof, a second turret set at an obtuse angle to the facade and stepped gables.  </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -142,8 +155,38 @@
     </div>
   </section>
 
-  <!-- Signup Section -->
-  <section id="rsvp" class="signup-section">
+  <!-- Accomodation Section -->
+  <section id="accomodation" class="accomodation-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-10 col-lg-8 mx-auto text-center">
+              <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+              <h2 class="text-black mb-5">Accomodation Options</h2>
+              <ol>
+                  <li> <p class="mb-0 text-black-50">Breaffy House</p></li>
+                  <li> <p class="mb-0 text-black-50">Breaffy Woods</p></li>
+                  <li> <p class="mb-0 text-black-50">B & B</p></li>
+              </ol>
+          </div>
+        </div>
+      </div>
+    </section>
+
+      <!-- Gallery Section -->
+<section id="gallery" class="gallery-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-lg-8 mx-auto text-center">
+          <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+          <h2 class="text-black mb-5">Our Journey</h2>
+          
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- RSVP Section -->
+  <section id="rsvp" class="rsvp-section">
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
@@ -171,9 +214,9 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
+              <h4 class="text-uppercase m-0">Hotel</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">Castlebar</div>
             </div>
           </div>
         </div>
