--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
       </div>
     </section>
 
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="js/gallery.min.js">
+
+  </script>
       <!-- Gallery Section -->
 <section id="gallery" class="gallery-section">
     <div class="container">
@@ -179,8 +183,169 @@
         <div class="col-md-10 col-lg-8 mx-auto text-center">
           <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
           <h2 class="text-black mb-5">Our Journey</h2>
-          
         </div>
+      </div>
+      <div class="gallery-container">
+          <div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:1000px;height:800px;overflow:hidden;visibility:hidden;">
+              <!-- Loading Screen -->
+              <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
+                  <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="gallery-img/spin.svg" />
+              </div>
+              <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:1000px;height:800px;overflow:hidden;">
+                  <div>
+                      <img data-u="image" src="gallery-img/001.jpeg" />
+                      <img data-u="thumb" src="gallery-img/001.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/002.jpeg" />
+                      <img data-u="thumb" src="gallery-img/002.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/003.jpeg" />
+                      <img data-u="thumb" src="gallery-img/003.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/004.jpeg" />
+                      <img data-u="thumb" src="gallery-img/004.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/005.jpeg" />
+                      <img data-u="thumb"  src="gallery-img/005.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/006.jpeg" />
+                      <img data-u="thumb" src="gallery-img/006.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/007.jpeg" />
+                      <img data-u="thumb" src="gallery-img/007.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/008.jpeg" />
+                      <img data-u="thumb"  src="gallery-img/008.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/009.jpeg" />
+                      <img data-u="thumb" src="gallery-img/009.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/010.jpeg" />
+                      <img data-u="thumb" src="gallery-img/010.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/011.jpeg" />
+                      <img data-u="thumb" src="gallery-img/011.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/012.jpeg" />
+                      <img data-u="thumb" src="gallery-img/012.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/013.jpeg" />
+                      <img data-u="thumb" src="gallery-img/013.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/014.jpeg" />
+                      <img data-u="thumb" src="gallery-img/014.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/015.jpeg" />
+                      <img data-u="thumb"  src="gallery-img/015.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/016.jpeg" />
+                      <img data-u="thumb" src="gallery-img/016.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/017.jpeg" />
+                      <img data-u="thumb" src="gallery-img/017.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/018.jpeg" />
+                      <img data-u="thumb"  src="gallery-img/018.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/019.jpeg" />
+                      <img data-u="thumb" src="gallery-img/019.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/020.jpeg" />
+                      <img data-u="thumb" src="gallery-img/020.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/021.jpeg" />
+                      <img data-u="thumb" src="gallery-img/021.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/022.jpeg" />
+                      <img data-u="thumb" src="gallery-img/022.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/023.jpeg" />
+                      <img data-u="thumb" src="gallery-img/023.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/024.jpeg" />
+                      <img data-u="thumb" src="gallery-img/024.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/025.jpeg" />
+                      <img data-u="thumb"  src="gallery-img/025.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/026.jpeg" />
+                      <img data-u="thumb" src="gallery-img/026.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/027.jpeg" />
+                      <img data-u="thumb" src="gallery-img/027.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/028.jpeg" />
+                      <img data-u="thumb"  src="gallery-img/028.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/029.jpeg" />
+                      <img data-u="thumb" src="gallery-img/029.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/030.jpeg" />
+                      <img data-u="thumb" src="gallery-img/030.jpeg" />
+                  </div>
+                  <div>
+                      <img data-u="image" src="gallery-img/031.jpeg" />
+                      <img data-u="thumb" src="gallery-img/031.jpeg" />
+                  </div>
+              </div>
+              <!-- Thumbnail Navigator -->
+              <div data-u="thumbnavigator" class="jssort101" style="position:absolute;left:0px;bottom:0px;width:980px;height:100px;background-color:#000;" data-autocenter="1" data-scale-bottom="0.75">
+                  <div data-u="slides">
+                      <div data-u="prototype" class="p" style="width:190px;height:90px;">
+                          <div data-u="thumbnailtemplate" class="t"></div>
+                          <svg viewbox="0 0 16000 16000" class="cv">
+                              <circle class="a" cx="8000" cy="8000" r="3238.1"></circle>
+                              <line class="a" x1="6190.5" y1="8000" x2="9809.5" y2="8000"></line>
+                              <line class="a" x1="8000" y1="9809.5" x2="8000" y2="6190.5"></line>
+                          </svg>
+                      </div>
+                  </div>
+              </div>
+              <!-- Arrow Navigator -->
+              <div data-u="arrowleft" class="jssora106" style="width:55px;height:55px;top:352px;left:30px;" data-scale="0.75">
+                  <svg viewbox="0 0 16000 16000" style="position:absolute;top:0;left:0;width:100%;height:100%;">
+                      <circle class="c" cx="8000" cy="8000" r="6260.9"></circle>
+                      <polyline class="a" points="7930.4,5495.7 5426.1,8000 7930.4,10504.3 "></polyline>
+                      <line class="a" x1="10573.9" y1="8000" x2="5426.1" y2="8000"></line>
+                  </svg>
+              </div>
+              <div data-u="arrowright" class="jssora106" style="width:55px;height:55px;top:352px;right:30px;" data-scale="0.75">
+                  <svg viewbox="0 0 16000 16000" style="position:absolute;top:0;left:0;width:100%;height:100%;">
+                      <circle class="c" cx="8000" cy="8000" r="6260.9"></circle>
+                      <polyline class="a" points="8069.6,5495.7 10573.9,8000 8069.6,10504.3 "></polyline>
+                      <line class="a" x1="5426.1" y1="8000" x2="10573.9" y2="8000"></line>
+                  </svg>
+              </div>
+          </div>
       </div>
     </div>
   </section>
@@ -269,11 +434,11 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="js/jssor.slider-27.5.0.min.js" type="text/javascript"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/site.min.js"></script>
