--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
   <!-- Custom styles for this template -->
   <link href="css/styles.min.css" rel="stylesheet">
 
+  <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/icons/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+  <link rel="manifest" href="img/icons/site.webmanifest">
+  <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="img/icons/favicon.ico">
+  <meta name="apple-mobile-web-app-title" content="Gean &amp; Rob">
+  <meta name="application-name" content="Gean &amp; Rob">
+  <meta name="msapplication-TileColor" content="#b91d47">
+  <meta name="msapplication-config" content="img/icons/browserconfig.xml">
+  <meta name="theme-color" content="#0054ba">
+  <link rel="manifest" href="img/icons/manifest.json">
+
 </head>
 
 <body id="page-top">
@@ -31,6 +45,9 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Our Wedding</a>
+      <button onclick="install()">
+          Install
+        </button>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -536,6 +553,54 @@
       Copyright &copy; Awe 2020
     </div>
   </footer>
+
+  <script>
+      let deferredPrompt = null;
+
+      window.addEventListener('beforeinstallprompt', (e) => {
+        // Prevent Chrome 67 and earlier from automatically showing the prompt
+        e.preventDefault();
+        // Stash the event so it can be triggered later.
+        deferredPrompt = e;
+      });
+
+      async function install() {
+        if (deferredPrompt) {
+          deferredPrompt.prompt();
+          console.log(deferredPrompt)
+          deferredPrompt.userChoice.then(function(choiceResult){
+
+            if (choiceResult.outcome === 'accepted') {
+            console.log('Your PWA has been installed');
+          } else {
+            console.log('User chose to not install your PWA');
+          }
+
+          deferredPrompt = null;
+
+          });
+
+
+        }
+      }
+  </script>
+
+  <script>
+    if ("serviceWorker" in navigator) {
+      if (navigator.serviceWorker.controller) {
+        console.log("[PWA Builder] active service worker found, no need to register");
+      } else {
+        // Register the service worker
+        navigator.serviceWorker
+          .register("pwabuilder-sw.js", {
+            scope: "./"
+          })
+          .then(function (reg) {
+            console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+          });
+      }
+    }
+  </script>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
