--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <meta name="author" content="awe">
 
   <title>Gean & Rob</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+  
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
@@ -30,12 +29,11 @@
   <link rel="manifest" href="img/icons/site.webmanifest">
   <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="shortcut icon" href="img/icons/favicon.ico">
-  <meta name="apple-mobile-web-app-title" content="Gean &amp; Rob">
+  <meta name="apple-mobile-web-app-title" content="G &amp; R">
   <meta name="application-name" content="Gean &amp; Rob">
   <meta name="msapplication-TileColor" content="#b91d47">
   <meta name="msapplication-config" content="img/icons/browserconfig.xml">
   <meta name="theme-color" content="#0054ba">
-
 </head>
 
 <body id="page-top">
@@ -44,8 +42,9 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Our Wedding</a>
-      <button onclick="install()">
-          Install
+      <div id="installedText" >(App Installed)</div>
+      <button id="installButton" class="btn btn-info" hidden>
+          Install As App
         </button>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -119,7 +118,7 @@
     <div class="container">
         <h2 class="text-black mb-4 text-center">The Reception</h2>
 
-      <!-- Featured Project Row -->
+      <!-- Main Hotel Info Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
           <img class="img-fluid mb-3 mb-lg-0" src="img/breaffy-house.jpg" alt="">
@@ -132,7 +131,7 @@
         </div>
       </div>
 
-      <!-- Project One Row -->
+      <!--  Hotel Info 1 Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/park.jpg" alt="">
@@ -150,7 +149,7 @@
         </div>
       </div>
 
-      <!-- Project Two Row -->
+      <!--  Hotel Info 2 Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/night.jpg" alt="">
@@ -188,7 +187,7 @@
       </div>
     </section>
 
-  <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/jquery/jquery.min.js"></script>
   <script src="js/gallery.min.js">
 
   </script>
@@ -197,7 +196,6 @@
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
-          <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
           <h2 class="text-black mb-5">Our Journey</h2>
         </div>
       </div>
@@ -366,6 +364,147 @@
     </div>
   </section>
 
+  <section id="gallery" class="polaroid-gallery">
+    <div class="container">
+        <div class="col-md-10 col-lg-8 mx-auto text-center">
+          <div class="row">
+            <div class="col-3">
+              <div class="camera-img"></div>
+            </div>
+              <div class="col-6 polaroid-title-container">
+                <h2 class="text-black">Our Snaps</h2>
+              </div>   
+          </div>
+            </div>
+      </div>
+      <div id="polaroid-gallery" class="polaroid-section photostack photostack-start">
+        <div class="wood-container">
+          <figure>
+            <img src="img/gallery/5.jpg" alt="img01"/>
+            <figcaption>
+              <h2 class="photostack-title">Venice</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="img/gallery/1.jpg" alt="img01"/>
+            <figcaption>
+              <h2 class="photostack-title">Áran Mór</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="img/gallery/8.jpg" alt="img08"/>
+            <figcaption>
+              <h2 class="photostack-title">Santorini</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <a href="http://goo.gl/Jmvr4u" class="photostack-img"><img src="img/gallery/3.jpg" alt="img03"/></a>
+            <figcaption>
+              <h2 class="photostack-title">Galway Races</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <a href="http://goo.gl/49lN3k" class="photostack-img"><img src="img/gallery/4.jpg" alt="img04"/></a>
+            <figcaption>
+              <h2 class="photostack-title">Halloween</h2>
+            </figcaption>
+          </figure>
+
+          <figure>
+            <a href="http://goo.gl/Ms7VDl" class="photostack-img"><img src="img/gallery/6.jpg" alt="img06"/></a>
+            <figcaption>
+              <h2 class="photostack-title">Munich</h2>
+            </figcaption>
+          </figure>
+          <figure>
+              <a href="http://goo.gl/fhwlSP" class="photostack-img"><img src="img/gallery/2.jpg" alt="img02"/></a>
+              <figcaption>
+                <h2 class="photostack-title">Galway</h2>
+              </figcaption>
+            </figure>
+          <figure>
+              <a href="http://goo.gl/Ms7VDl" class="photostack-img"><img src="img/gallery/12.jpg" alt="img06"/></a>
+              <figcaption>
+                <h2 class="photostack-title">Malibu</h2>
+              </figcaption>
+            </figure>
+          <figure>
+            <a href="http://goo.gl/NJ1Dhf" class="photostack-img"><img src="img/gallery/7.jpg" alt="img07"/></a>
+            <figcaption>
+              <h2 class="photostack-title">Bushmills Distillery</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <a href="http://goo.gl/Jmvr4u" class="photostack-img"><img src="img/gallery/9.jpg" alt="img03"/></a>
+            <figcaption>
+              <h2 class="photostack-title">Connemara</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <a href="http://goo.gl/49lN3k" class="photostack-img"><img src="img/gallery/10.jpg" alt="img04"/></a>
+            <figcaption>
+              <h2 class="photostack-title">Bordeaux Vinyards</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <a href="http://goo.gl/NJ1Dhf" class="photostack-img"><img src="img/gallery/11.jpg" alt="img05"/></a>
+            <figcaption>
+              <h2 class="photostack-title">San Fransisco Bay</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <a href="http://goo.gl/NJ1Dhf" class="photostack-img"><img src="img/gallery/13.jpg" alt="img07"/></a>
+            <figcaption>
+              <h2 class="photostack-title">Acheron</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <img src="img/gallery/8.jpg" alt="img14"/>
+            <figcaption>
+              <h2 class="photostack-title">Galway</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <a href="http://goo.gl/Jmvr4u" class="photostack-img"><img src="img/gallery/15.jpg" alt="img03"/></a>
+            <figcaption>
+              <h2 class="photostack-title">Greece</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <a href="http://goo.gl/49lN3k" class="photostack-img"><img src="img/gallery/16.jpg" alt="img04"/></a>
+            <figcaption>
+              <h2 class="photostack-title">Beir Hause</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <a href="http://goo.gl/NJ1Dhf" class="photostack-img"><img src="img/gallery/17.jpg" alt="img05"/></a>
+            <figcaption>
+              <h2 class="photostack-title">San Sebastian</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <a href="http://goo.gl/Ms7VDl" class="photostack-img"><img src="img/gallery/18.jpg" alt="img06"/></a>
+            <figcaption>
+              <h2 class="photostack-title">Venice</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <a href="http://goo.gl/NJ1Dhf" class="photostack-img"><img src="img/gallery/19.jpg" alt="img05"/></a>
+            <figcaption>
+              <h2 class="photostack-title">Portugal</h2>
+            </figcaption>
+          </figure>
+          <figure>
+            <a href="http://goo.gl/Ms7VDl" class="photostack-img"><img src="img/gallery/20.jpg" alt="img06"/></a>
+            <figcaption>
+              <h2 class="photostack-title">Dublin</h2>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+    
+  </section>
+
   <!-- RSVP Section -->
   <section id="rsvp" class="rsvp-section">
     <div class="container">
@@ -458,30 +597,6 @@
               </form>
           </div>
         </div>
-
-    <!-- <div class="container">
-      <div >
-        <div class="col-md-10 col-lg-8 mx-auto text-center">
-
-          <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-          <h2 class="text-white mb-5">RSVP to our Wedding</h2>
-
-          <form class="form-inline d-flex">
-            <div class="row">
-              <label class="col-md-4 text-white mb-5">Name</label>
-              <input type="text" class="col-md-8 form-control " id="inputName" placeholder="Enter Your Name">
-            </div>
-            <div class="row">
-                <label class="col-md-8 text-white mb-5">Will you be attending?</label>
-                <input type="checkbox" class="col-md-2 form-control text-white mb-5" name="isAttending" value="yes">Yes<br>
-                <input type="checkbox" class="col-md-2 form-control text-white mb-5" name="isAttending" value="No">No<br>
-            </div>
-          <!-- <input type="text" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="input" placeholder="Your Name">
-          <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-          <textarea name="message" rows="10" cols="30">
-              Messages for Gean & Rob
-              </textarea> -->
-            <!-- <button type="submit" class="btn btn-primary mx-auto">Submit</button> -->
           </form>
 
         </div>
@@ -553,37 +668,7 @@
     </div>
   </footer>
 
-  <script>
-      let deferredPrompt = null;
-
-      window.addEventListener('beforeinstallprompt', (e) => {
-        // Prevent Chrome 67 and earlier from automatically showing the prompt
-        e.preventDefault();
-        // Stash the event so it can be triggered later.
-        deferredPrompt = e;
-      });
-
-      async function install() {
-        if (deferredPrompt) {
-          deferredPrompt.prompt();
-          console.log(deferredPrompt)
-          deferredPrompt.userChoice.then(function(choiceResult){
-
-            if (choiceResult.outcome === 'accepted') {
-            console.log('Your PWA has been installed');
-          } else {
-            console.log('User chose to not install your PWA');
-          }
-
-          deferredPrompt = null;
-
-          });
-
-
-        }
-      }
-  </script>
-
+  <!-- Sevice Worker Registration -->
   <script>
     if ("serviceWorker" in navigator) {
       if (navigator.serviceWorker.controller) {
@@ -600,7 +685,10 @@
       }
     }
   </script>
+  <!-- service work install script -->
+  <script src="js/pwa-install.min.js"></script>
 
+  <script src="vendor/jquery/jquery.min.js"></script>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -608,9 +696,21 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
   <script src="js/jssor.slider-27.5.0.min.js" type="text/javascript"></script>
 
-  <!-- Custom scripts for this template -->
+  <!-- Site Scripts -->
   <script src="js/site.min.js"></script>
   <script src="js/countdown.min.js"></script>
+
+  <!-- Polaroid Scripts -->
+  <script src="js/modernizr.min.js"></script>
+  <script src="js/classie.min.js"></script>
+  <script src="js/photostack.min.js"></script> 
+  <script>
+    new Photostack( document.getElementById( 'polaroid-gallery' ), {
+      callback : function( item ) {
+        console.log(item);
+      }
+    } );
+  </script>
 
 </body>
 
