--- a/index.html
+++ b/index.html
@@ -502,8 +502,7 @@
             </figcaption>
           </figure>
         </div>
-      </div>
-    
+      </div>    
   </section>
 
   <!-- RSVP Section -->
@@ -718,7 +717,7 @@
   <script>
     new Photostack( document.getElementById( 'polaroid-gallery' ), {
       callback : function( item ) {
-        console.log(item);
+        // console.log(item);
       }
     } );
   </script>
