--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <meta name="msapplication-TileColor" content="#b91d47">
   <meta name="msapplication-config" content="img/icons/browserconfig.xml">
   <meta name="theme-color" content="#0054ba">
+  <meta property="og:image" itemprop="image" content="img/icons/favicon.ico">
   <script src="js/modernizr.min.js"></script>
 </head>
 
@@ -185,11 +186,40 @@
                 <i class="fas fa-hotel text-primary accomodation-icon mb-2"></i>
                 <h4 class="text-uppercase m-0">Accomodation</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">
-                  <ol>
-                      <li> <p class="mb-0 text-black-50">Breaffy House</p></li>
-                      <li> <p class="mb-0 text-black-50">Breaffy Woods</p></li>
-                      <li> <p class="mb-0 text-black-50">B & B</p></li>
+                <div class="xlarge text-black-50">
+                  <ol class="accom-ol">
+                    <li> 
+                        <h3 class="mb-0 accom-header-text">Breaffy House (Wedding Hotel)
+                        </h3>
+                        <h5>
+                          <a href="https://www.breaffyhouseresort.com/house-landing.html">
+                            CLICK HERE
+                          </a>
+                        </h5>
+                      <p class="accom-body-text">Discount Code available for Friday & Saturday <b>HK050620</b> <br/>
+                      *Note code is a fixed rate, if booking Thursday its cheaper to book that seperately with no code</p>
+                    </li>
+                    <li> 
+                          <h3 class="mb-0 accom-header-text">Breaffy Woods Hotel
+                          </h3>
+                          <h5>
+                            <a href=" https://www.breaffyhouseresort.com/woods-landing.html">
+                              CLICK HERE
+                            </a>
+                          </h5>
+                        <p class="accom-body-text">Sister property on the same estate as Breaffy House (2 min walk)</p>
+                      </li>
+                      <li> 
+                          <h3 class="mb-0 accom-header-text">Alternative Accomodation
+                          </h3>
+                          <h5>
+                            <a href="https://www.booking.com/searchresults.html?aid=304142&label=gen173bo-1DCAsoaUISd29vZHZpZXctbG9kZ2UtYi1iSDNYA2hpiAEBmAExuAEXyAEM2AED6AEB-AEDiAIBmAICqAIDuAKroKPtBcACAQ&sid=6a9bde8eac12fc69595bb6656371277f&tmpl=searchresults&ac_click_type=b&ac_position=0&checkin_month=6&checkin_monthday=5&checkin_year=2020&checkout_month=6&checkout_monthday=7&checkout_year=2020&city=-1501470&class_interval=1&dest_id=-1501470&dest_type=city&dtdisc=0&from_sf=1&group_adults=2&group_children=0&highlighted_hotels=220075&hp_sbox=1&inac=0&index_postcard=0&label_click=undef&no_rooms=1&percent_htype_hotel=1&postcard=0&raw_dest_type=hotel&room1=A%2CA&sb_price_type=total&search_selected=1&shw_aparth=1&slp_r_match=0&src=hotel&srpvid=280f90bb3e3b03bc&ss=Breaffy%20House%20Hotel%20and%20Spa%2C%20Castlebar%2C%20Mayo%2C%20Ireland&ss_all=0&ss_raw=Breaffy%2C%20Mayo&ssb=empty&sshis=0&ssne=Castlebar&ssne_untouched=Castlebar&top_ufis=1&nflt=ht_id%3D204%3Bht_id%3D201%3Bht_id%3D208%3B&clear_ht_id=1&rdf=&percent_htype_apt=1&rsf=">
+                              CLICK HERE
+                            </a>
+                          </h5>
+                        <p class="accom-body-text">B&Bs and Hotel options from booking.com</p>
+                      </li>
+                      
                   </ol>
                 </div>
               </div>
@@ -218,9 +248,9 @@
           <figure>
            <img src="img/gallery/0.jpg" alt="img05"/>
             <figcaption>
-              <h2 class="photostack-title">Venice</h2>
+              <h2 class="photostack-title">Dublin</h2>
                 <div class="photostack-back">
-                    <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                    <p><strong>Black Tie</strong> Jamie and Hannahs Wedding in the Shelbourn</p>
                 </div>
             </figcaption>
           </figure>
@@ -229,16 +259,16 @@
             <figcaption>
               <h2 class="photostack-title">Áran Mór</h2>
               <div class="photostack-back">
-                <p><strong>15 June 2018</strong> Our Trip to Áran </p>
+                <p><strong>June 2019</strong> Our Trip to Áran Mór with Lisa and Giles</p>
               </div>
             </figcaption>
           </figure>
           <figure>
             <img src="img/gallery/2.jpg" alt="img01"/>
             <figcaption>
-              <h2 class="photostack-title">Santorini</h2>
+              <h2 class="photostack-title">Unknown location</h2>
               <div class="photostack-back">
-                <p><strong>15 June 2018</strong> Our Trip to Santorini  </p>
+                <p><strong>??</strong> Remind us where this was </p>
               </div>
             </figcaption>
           </figure>
@@ -247,7 +277,7 @@
             <figcaption>
               <h2 class="photostack-title">Galway Races</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p><strong>02 Aug 2019</strong> Enjoying Race Week </p>
               </div>
             </figcaption>
           </figure>
@@ -256,43 +286,43 @@
             <figcaption>
               <h2 class="photostack-title">Halloween</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p><strong>31 October 2016</strong> Showing off our costumes  </p>
               </div>
             </figcaption>
           </figure>
           <figure>
             <img src="img/gallery/5.jpg" alt="img06"/>
             <figcaption>
-              <h2 class="photostack-title">Munich</h2>
+              <h2 class="photostack-title">Venice</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p><strong>15 June 2018</strong> Our Trip to Italy/Venice  </p>
               </div>
             </figcaption>
           </figure>
           <figure>
               <img src="img/gallery/6.jpg" alt="img05"/>
               <figcaption>
-                <h2 class="photostack-title">Galway</h2>
+                <h2 class="photostack-title">Munich</h2>
                 <div class="photostack-back">
-                    <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                    <p><strong>15 September 2018</strong> Enjoying the beer halls in Munich </p>
                 </div>
               </figcaption>
             </figure>
           <figure>
               <img src="img/gallery/7.jpg" alt="img05"/>
               <figcaption>
-                <h2 class="photostack-title">Malibu</h2>
+                <h2 class="photostack-title">Bushmills</h2>
                 <div class="photostack-back">
-                    <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                    <p><strong></strong> Bushmills Distillery tour </p>
                 </div>
               </figcaption>
             </figure>
           <figure>
             <img src="img/gallery/8.jpg" alt="img05"/>
             <figcaption>
-              <h2 class="photostack-title">Bushmills Distillery</h2>
+              <h2 class="photostack-title">Santorini</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p><strong>15 June 2018</strong> Walking for Fira to Oia in Santorini  </p>
               </div>
             </figcaption>
           </figure>
@@ -301,7 +331,7 @@
             <figcaption>
               <h2 class="photostack-title">Connemara</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p><strong>12 May 2019</strong> Enjoying the view at Maeve and Judges Wedding  </p>
               </div>
             </figcaption>
           </figure>
@@ -310,7 +340,7 @@
             <figcaption>
               <h2 class="photostack-title">Bordeaux Vinyards</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p><strong>10 July 2019</strong> Lookin over the grapes in bordeaux  </p>
               </div>
             </figcaption>
           </figure>
@@ -319,79 +349,79 @@
             <figcaption>
               <h2 class="photostack-title">San Fransisco Bay</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p><strong>15 June 2018</strong> Road / boat tripping across the states </p>
               </div>
             </figcaption>
           </figure>
           <figure>
             <img src="img/gallery/12.jpg" alt="img05"/>
             <figcaption>
-              <h2 class="photostack-title">Acheron</h2>
+              <h2 class="photostack-title">Malibu</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p><strong>15 June 2018</strong> Short stop in malibu in California </p>
               </div>
             </figcaption>
           </figure>
           <figure>
             <img src="img/gallery/13.jpg" alt="img05"/>
             <figcaption>
-              <h2 class="photostack-title">Galway</h2>
+              <h2 class="photostack-title">Cote D'Azur</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p><strong>15 June 2018</strong> Shadows in the sand across from europes biggest sand dune  </p>
               </div>
             </figcaption>
           </figure>
           <figure>
             <img src="img/gallery/14.jpg" alt="img05"/>
             <figcaption>
-              <h2 class="photostack-title">Greece</h2>
+              <h2 class="photostack-title">Hive Bar</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p><strong></strong> Clubbing around Galway with Gav and Aoife  </p>
               </div>
             </figcaption>
           </figure>
           <figure>
             <img src="img/gallery/15.jpg" alt="img05"/>
             <figcaption>
-              <h2 class="photostack-title">Beir Hause</h2>
+              <h2 class="photostack-title">Greece Islands</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p><strong></strong> Sunset Fishing tour in Greece  </p>
               </div>
             </figcaption>
           </figure>
           <figure>
             <img src="img/gallery/16.jpg" alt="img05"/>
             <figcaption>
-              <h2 class="photostack-title">San Sebastian</h2>
+              <h2 class="photostack-title">Galway</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p>Found some Weiss beer in Galway </p>
               </div>
             </figcaption>
           </figure>
           <figure>
             <img src="img/gallery/17.jpg" alt="img05"/>
             <figcaption>
-              <h2 class="photostack-title">Venice</h2>
+              <h2 class="photostack-title">San Sebastian</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p>Our tour of spain </p>
               </div>
             </figcaption>
           </figure>
           <figure>
             <img src="img/gallery/18.jpg" alt="img05"/>
             <figcaption>
-              <h2 class="photostack-title">Portugal</h2>
+              <h2 class="photostack-title">Radisson</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p>Early days in Race week</p>
               </div>
             </figcaption>
           </figure>
           <figure>
             <img src="img/gallery/19.jpg" alt="img05"/>
             <figcaption>
-              <h2 class="photostack-title">Dublin</h2>
+              <h2 class="photostack-title">Portugal</h2>
               <div class="photostack-back">
-                  <p><strong>15 June 2018</strong> Our Trip to Venice  </p>
+                  <p>Our first trip together is Lisbon </p>
               </div>
             </figcaption>
           </figure>
@@ -515,7 +545,7 @@
             <div class="card-body text-center">
               <h4 class="text-uppercase m-0">Upload and Share Pics</h4>
               <hr class="my-4">
-              <a href="https://interact.geanandrob.com/snap" id="snapZoneButton" class="btn btn-danger">
+              <a href="https://interact.geanandrob.com/upload" id="snapZoneButton" class="btn btn-danger">
                 <i class="fas fa-camera-retro zone-button"></i>
                 <span>  Snap Zone</span>
               </a>       
@@ -528,7 +558,7 @@
             <div class="card-body text-center">
               <h4 class="text-uppercase m-0">Comment and Discussion Board</h4>
               <hr class="my-4">
-              <a href="https://interact.geanandrob.com/chat" id="chatZoneButton" class="btn btn-primary">
+              <a href="https://interact.geanandrob.com/gallery" id="chatZoneButton" class="btn btn-primary">
                 <i class="fas fa-comments zone-button"></i>
                 <span>  Chat Zone</span>
               </a>    
@@ -619,7 +649,6 @@
   <script>
     var polaroidGal = new Photostack( document.getElementById( 'polaroid-gallery' ), {
       callback : function( item ) {
-        // console.log(item);
       }
     } );
   </script>
