--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <span class="title-text mx-auto my-0 text-uppercase"> & </span>
           <span class="title-text mx-auto my-0 text-uppercase">Rob</span>
           <h2 class="text-white-50 mx-auto mt-2 mb-5">5th June 2020</h2>
-          <a href="https://interact.geanandrob.com" class="btn btn-danger mast-button mr-4">Snap Zone</a>
+          <a href="https://interact.geanandrob.com" id="snapMastHeadButton" class="btn btn-danger mast-button mr-4">Snap Zone</a>
           <a href="#rsvp" id="rsvpMastHeadButton" class="btn btn-primary mast-button js-scroll-trigger">RSVP Now</a>
         </div>
       </div>
@@ -403,7 +403,7 @@
             <figcaption>
               <h2 class="photostack-title">San Sebastian</h2>
               <div class="photostack-back">
-                  <p>Our tour of spain </p>
+                  <p>Our tour of spain from </p>
               </div>
             </figcaption>
           </figure>
@@ -412,7 +412,7 @@
             <figcaption>
               <h2 class="photostack-title">Radisson</h2>
               <div class="photostack-back">
-                  <p>Early days in Race week</p>
+                  <p>Early days enjoying the radisson during Race week</p>
               </div>
             </figcaption>
           </figure>
@@ -421,7 +421,7 @@
             <figcaption>
               <h2 class="photostack-title">Portugal</h2>
               <div class="photostack-back">
-                  <p>Our first trip together is Lisbon </p>
+                  <p>Our first trip together in Lisbon </p>
               </div>
             </figcaption>
           </figure>
@@ -578,21 +578,6 @@
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="social d-flex justify-content-center">
-          <a href="/message-board" class="mx-2">
-            <i class="fas fa-comments"></i>
-          </a>
-          <a href="/picture-board" class="mx-2">
-            <i class="fas fa-camera-retro"></i>
-          </a>
-          <a href="https://www.breaffyhouseresort.com/" class="mx-2">
-          <i class="fas fa-hotel"></i>
-        </a>
-        <a href="#ceremony" class="mx-2">
-          <i class="fas fa-church"></i>
-        </a>
       </div>
 
     </div>
