--- a/index.html
+++ b/index.html
@@ -61,17 +61,20 @@
             <a class="nav-link js-scroll-trigger" href="#reception">Reception</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#accomodation">Accom</a>
+            <a class="nav-link js-scroll-trigger" href="#day2">Day 2</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#accomodation">Accom</a>
+          </li>
+          <!--li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#gallery">Snaps</a>
-            </li>
+            </li-->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
           </li>
-          <li class="nav-item">
+          <!--li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#interact">Interact</a>
-            </li>
+            </li-->
         </ul>
       </div>
     </div>
@@ -136,9 +139,9 @@
           </div>
         </div>
       </div>
-
-      <!--  Hotel Info 1 Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        
+              <!--  Hotel Info 1 Row -->
+      <!--div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/park.jpg" alt="">
         </div>
@@ -153,10 +156,10 @@
             </div>
           </div>
         </div>
-      </div>
+      </div-->
 
       <!--  Hotel Info 2 Row -->
-      <div class="row justify-content-center no-gutters">
+      <!--div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/night.jpg" alt="">
         </div>
@@ -171,8 +174,28 @@
             </div>
           </div>
         </div>
-      </div>
+      </div-->
 
+    </div>
+  </section>
+
+    <!-- Day2 Section -->
+  <section id="day2" class="day2-section">    
+    <div class="container">
+        <h2 class="text-black mb-4 text-center">Day 2</h2>
+
+      <!-- Day2 Hotel Info Row -->
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-7 col-lg-7">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/towers2.jpg" alt="">
+        </div>
+        <div class="col-xl-5 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h4>The Towers (Westport)</h4>
+            <p class="text-day2info mb-0">We also hope that you can join us to continue our celebrations with a casual BBQ on Saturday the 6th of June in the Towers Westport. For those staying in Breaffy there will be a bus picking guests up at 3pm outside breaffy house and returning later in the evening.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -510,6 +533,14 @@
                           <input type="radio" name="Day2" id="Day2-1" value="No">
                         </label>
                       </div>
+                    </div>
+                  </div>
+                    
+                       <!-- SongChoiceText -->
+                  <div class="row form-group">
+                    <label class="col-md-5 text-white control-label" for="songChoiceText">Favoutite Song?</label>
+                    <div class="col-md-7">                     
+                        <textarea class="form-control" placeholder="What would you like the band to play?" id="songChoiceText" name="songChoiceText"></textarea>
                     </div>
                   </div>
 
