--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
               <a class="nav-link js-scroll-trigger" href="#gallery">Snaps</a>
             </li-->
           <li class="nav-item">
+            <a href="" class="nav-link" data-toggle="modal" data-target="#smsSubsciptionForm">SMS</a>
+          </li>
+         <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
           </li>
           <!--li class="nav-item">
@@ -205,7 +208,7 @@
                                    </h5>
                                 </div> 
                                 <h5  class="text-center">(Wedding Venue)</h5>
-                                <p class="accom-body-text">Breaffy should be in touch with all guests that have register for June to rearrange accomodation for the new <b>October</b> dates.</p>
+                                <p class="accom-body-text">Breaffy should be in touch with all guests that have registered for June to rearrange accomodation for the new <b>October</b> dates.</p>
                                   <!--p class="accom-body-text">Discount Code available for Friday & Saturday <b>HK050620</b> <br/>
                                       <br/>
                                       <span class="note-txt">*Note code is a fixed rate, if booking Thursday its cheaper to book that seperately with no code</span>
@@ -568,7 +571,6 @@
                     </div>
                   </div>
 
-                  
                   <!-- Button -->
                   <div class="form-group">
                       <div class="col-md-12">
@@ -620,7 +622,7 @@
             <div class="card-body text-center">
               <h4 class="text-uppercase m-0">Email geanandrob@gmail.com</h4>
               <hr class="my-4">
-              <a href="mailto:geanandrob@gmail.com" class="btn btn-success">
+              <a href="mailto:geanandrob@gmail.com" id="emailButton" class="btn btn-success">
                 <i class="fas fa-envelope zone-button"></i>
                 <span>  Email Us</span>
               </a>    
