--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <section id="accomodation" class="accomodation-section">
         <div class="pt-4 pb-4 text-center">
               <i class="fas fa-hotel text-primary accomodation-icon mb-2"></i>
-              <h4 class="text-uppercase m-0">Accomodation</h4>
+              <h4 class="text-uppercase m-0">Accommodation</h4>
         </div>
       
         <div class="container">
@@ -208,7 +208,7 @@
                                    </h5>
                                 </div> 
                                 <h5  class="text-center">(Wedding Venue)</h5>
-                                <p class="accom-body-text">Breaffy should be in touch with all guests that have registered for June to rearrange accomodation for the new <b>October</b> dates.</p>
+                                <p class="accom-body-text">Breaffy should be in touch with all guests that have registered for June to rearrange accommodation for the new <b>October</b> dates.</p>
                                   <!--p class="accom-body-text">Discount Code available for Friday & Saturday <b>HK050620</b> <br/>
                                       <br/>
                                       <span class="note-txt">*Note code is a fixed rate, if booking Thursday its cheaper to book that seperately with no code</span>
@@ -238,7 +238,7 @@
                     <div class="card ">
                         <div class="card-block">
                              <div class="card-title text-center pt-2 pb-2 ">
-                                <h4><span>Alternative Accomodation</span> </h4>
+                                <h4><span>Alternative Accommodation</span> </h4>
                             </div>
                             <div class="card-body">
                                 <div>
